# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-03-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * C, Go, OCaml CloudI API change
      (breaks previous use of the C CloudI API) to keep state data
      within the CloudI API instance while using the same callback
      function argument order used by the Erlang CloudI API
        * The consistent interface CloudI provides with the CloudI API for
          CloudI service request data is:
          (RequestType, Name, Pattern, RequestInfo, Request,
           Timeout, Priority, TransId, Source)
          with the (State, API) data before the service request data in
          programming languages that use object methods
          (State is the object) or after the service request data in
          programming languages that rely on an isolated function
          (C, Erlang, Go, OCaml, Haskell (not added yet))
    * Add the count integration test

2017-03-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update quickrand, uuid

2017-03-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add module, line, function_name, function_arity information to
      cloudi_logger_hut (CloudI/HUT) logging integration

2017-02-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve type specification
    * Make hut application env settings explicit

2017-02-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add lager integration in cloudi_logger_lager module

2017-02-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update exometer and exometer_core dependencies for
      cloudi_service_monitoring
        * Add the hut dependency
        * Update parse_trans and setup dependencies
    * Add exometer_influxdb dependency for cloudi_service_monitoring
        * Add hackney dependency
            * Add certifi, idna, metrics, mimerl, ssl_verify_fun dependencies
    * Remove lager and goldrush