@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2017-03-14 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Improve OCaml CloudI API poll timeout handling
+
 2017-03-11 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * C, Go, OCaml CloudI API change
